Misc PR fixes